# totty

./: .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
src/totp_cli/: __init__.py  main.py
src/totty/: main.py
