[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "totty"
version = "0.1.0"
description = "A minimal, self-contained command-line tool for importing otpauth:// URIs and displaying Time-based One-Time Passwords (TOTP) on demand."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
maintainers = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
keywords = ["totp", "onetime", "password"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]
dependencies = ["cryptography>=45.0.5", "pyotp>=2.9.0", "rich>=14.1.0"]

[project.urls]
"Homepage" = "http://www.github.com/thecrazygm/totty"
"Download" = "https://github.com/thecrazygm/totty/tarball/0.1.0"
"Bug Tracker" = "https://github.com/thecrazygm/totty/issues"

[project.scripts]
totty = "totty:main"

[tool.uv.build-backend]
module-name = "totty"
module-root = "src/"
